--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -1,3 +1,10 @@
+.user-auth {
+  background-color: rgb(229, 229, 231);
+  background-size: cover;
+  width: 100%;
+  height: 150vh;
+}
+
 .price {
   margin-left: 13.5rem !important;
 }
@@ -249,12 +256,6 @@ p {
   cursor: pointer;
 }
 
-.user-auth {
-  background-color: rgb(229, 229, 231);
-  background-size: cover;
-  width: 100%;
-}
-
 :host
   ::ng-deep
   .p-dropdown
@@ -265,4 +266,18 @@ p {
   color: black;
   margin-left: 30px;
   font-weight: 600 !important;
+}
+
+.loading-spinner {
+  text-align: center;
+  margin-top: 100px;
+  padding: 20px;
+  font-size: 1.5rem;
+  height: 100vh;
+}
+
+.custom-spinner {
+  font-size: 20px;
+  width: 100px;
+  height: 100px;
 }
