--- a/src/app/component/products/products.component.scss
+++ b/src/app/component/products/products.component.scss
@@ -281,3 +281,22 @@ p {
   width: 100px;
   height: 100px;
 }
+
+/* Apply styles for screens with a minimum width of 1554px or higher */
+@media screen and (min-width: 375px) and (max-width: 1200px) {
+  .user-auth {
+    height: 470vh;
+  }
+}
+
+@media screen and (width: 1280px) and (height: 800px) {
+  .user-auth {
+    height: 200vh;
+  }
+}
+
+@media screen and (min-width: 1206px) {
+  .user-auth {
+    height: 160vh;
+  }
+}
