--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,42 @@
-<div class="background-image">
-    <div class="content">
-      <div class="flex-container">
-        <!-- <div class="center">
-          <p>Discover the latest trends in men's and women's clothing, electronics, and jewelry!</p>
-          <p>Shop from a wide range of products and enjoy exclusive deals and discounts.</p>
-        </div> -->
+<div class="body">
+  <div class="body_content">
+    <div class="body_subcontent">
+      <div class="body_panel">
+        <div class="panel-switcher">
+          <button mat-raised-button>
+            <div class="title">
+              Electronics
+            </div>
+            <div class="content">
+              Discover cutting-edge electronics that redefine innovation.
+            </div>
+          </button>
+          <button mat-raised-button>
+            <div class="title">
+              Jewelery
+            </div>
+            <div class="content">
+              Explore exquisite jewelry on our elegant ecommerce platform.
+            </div>
+          </button>
+          <button mat-raised-button>
+            <div class="title">
+              Men's Clothing
+            </div>
+            <div class="content">
+              Upgrade your style with the latest trends in men's fashion.
+            </div>
+          </button>
+          <button mat-raised-button>
+            <div class="title">
+              Women's Clothing
+            </div>
+            <div class="content">
+              Discover chic women's clothing for every occasion.
+            </div>
+          </button>
+        </div>
       </div>
     </div>
   </div>
-  
+</div>
