Update Home Page Component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,14 @@
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+<!-- Include the link in the head of your HTML file -->
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
+
+
 <div class="body">
+  <div class="header-container">
+    <div class="right">
+      <h1>W E L C O M E !</h1>
+    </div>
+  </div>
   <div class="body_content">
     <div class="body_subcontent">
       <div class="body_panel">
@@ -39,4 +49,5 @@
       </div>
     </div>
   </div>
+  <div class="footer-container"> </div>
 </div>
