--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
   background-color: #04020d;
   color: #fff;
-  /* padding: 20px 0; */
+  padding: 20px;
   text-align: center;
   margin: 0;
 }
@@ -14,7 +14,6 @@ footer {
   margin: 0 auto;
   padding-top: 32px;
 }
-
 
 .footer-section h5 {
   margin-bottom: 10px;
