Update some style

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,12 @@
   <div class="body_content">
 
     <div class="body_subcontent">
+      <div class="description">
+        Welcome to our online store, where innovation meets style! Explore our vast collection of cutting-edge
+        electronics,
+        featuring the latest in technology. Elevate your fashion game with our chic men's and women's clothing lines,
+        showcasing the trendiest styles for every occasion.
+      </div>
       <div class="body_panel">
         <div class="panel-switcher">
 
