--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,32 +1,34 @@
-<ng-container *ngIf="selectedProduct">
-    <div class="container">
-        <div class="card-table">
-            <div class="cart-product">
-                <table class="table table-responsive">
-                    <thead>
-                        <tr>
-                            <th>PRODUCT DETAILS</th>
-                            <th>IMAGE</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <h6>Product Name:</h6>
-                                <p>{{ selectedProduct?.title }}</p>
+<div class="details">
+    <ng-container *ngIf="selectedProduct">
+        <div class="container">
+            <div class="card-table">
+                <div class="cart-product">
+                    <table class="table table-responsive">
+                        <thead>
+                            <tr>
+                                <th>PRODUCT DETAILS</th>
+                                <th>IMAGE</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h6>Product Name:</h6>
+                                    <p>{{ selectedProduct?.title }}</p>
 
-                                <h6>Description:</h6>
-                                <p>{{ selectedProduct?.description }}</p>
-                                <h6>Price:</h6>
-                                <p>{{ selectedProduct?.price }} $</p>
-                            </td>
-                            <td>
-                                <img src="{{ selectedProduct?.image }}" alt="Product Image">
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                                    <h6>Description:</h6>
+                                    <p>{{ selectedProduct?.description }}</p>
+                                    <h6>Price:</h6>
+                                    <p>{{ selectedProduct?.price }} $</p>
+                                </td>
+                                <td>
+                                    <img src="{{ selectedProduct?.image }}" alt="Product Image">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </div>
-</ng-container>
+    </ng-container>
+</div>
