--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -27,7 +27,9 @@
 .about-us {
   justify-content: center;
   align-items: center;
-  margin-top: 200px;
+  padding-top: 170px;
+  background-image: url("https://roomdsign.com/wp-content/uploads/2022/12/white-wall-with-light-wood-flooring.jpg");
+  // background-size: cover;
   // height: 100vh;
 }
 
