--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
 <div class="body">
   <div class="header-container">
     <div class="right">
-      <h1>W E L C O M E !</h1>
+      <h1>{{ 'welcome' | translate }}</h1>
     </div>
   </div>
   <div class="center">CHOOSE THE CATEGORY ...</div>
@@ -14,10 +14,7 @@
 
     <div class="body_subcontent">
       <div class="description">
-        Welcome to our online store, where innovation meets style! Explore our vast collection of cutting-edge
-        electronics,
-        featuring the latest in technology. Elevate your fashion game with our chic men's and women's clothing lines,
-        showcasing the trendiest styles for every occasion.
+        {{ 'desc' | translate }}
       </div>
       <div class="body_panel">
         <div class="panel-switcher">
