--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,6 +1,5 @@
 <section class="header clearfix">
     <div class="container">
-
         <div class="my-navbar">
             <div class="left-side-nav">
                 <a routerLink="products"> <i class="pi pi-amazon">&nbsp;</i></a>
@@ -19,18 +18,16 @@
                         <a routerLink="home">HOME</a>
                         <a routerLink="about-us">ABOUT US</a>
                         <a routerLink="contact-us">CONTACT US</a>
-
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+                        <div class="language-dropdown">
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 {{ currentLanguage }}
                             </button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" (click)="switchLanguage('en')">🇬🇧 English</a>
-                                <a class="dropdown-item" (click)="switchLanguage('it')">🇮🇹 Italiano</a>
+                                <a class="dropdown-item" (click)="switchLanguage('en')">ENGLISH</a>
+                                <a class="dropdown-item" (click)="switchLanguage('it')">ITALIANO</a>
                             </div>
                         </div>
-
                         <button class="nofocus" routerLink="cart">
                             <i class="pi pi-shopping-cart"></i>
                             <div class="badge bg-danger">{{cartLength}}</div>
@@ -40,29 +37,30 @@
                             <i class="pi pi-user"></i>
                         </a>
                     </div>
-
-
                     <div class="user-info" *ngSwitchCase="'user'">
                         <a routerLink="home">HOME</a>
                         <a routerLink="about-us">ABOUT US</a>
                         <a routerLink="contact-us">CONTACT US</a>
                         <a routerLink="orders">ORDERS</a>
                         <a>{{userName | uppercase}}</a>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+
+                        <a (click)="userLogout()" style="cursor: pointer;"> <i class="pi pi-sign-out"></i></a>
+                        <div class="language-dropdown">
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 {{ currentLanguage }}
                             </button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" (click)="switchLanguage('en')">🇬🇧 English</a>
-                                <a class="dropdown-item" (click)="switchLanguage('it')">🇮🇹 Italiano</a>
+                                <a class="dropdown-item" (click)="switchLanguage('en')">ENGLISH</a>
+                                <a class="dropdown-item" (click)="switchLanguage('it')">ITALIANO</a>
                             </div>
                         </div>
-                        <a (click)="userLogout()" style="cursor: pointer;"> <i class="pi pi-sign-out"></i></a>
                         <button class="nofocus" routerLink="cart">
                             <i class="pi pi-shopping-cart"></i>
                             <div class="badge bg-danger">{{cartLength}}</div>
                         </button>
+
+
 
                     </div>
 
