--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -22,8 +22,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  max-width: 1200px;
+  padding: 19px;
+  max-width: 1300px;
   margin: 0 auto;
 }
 
@@ -102,29 +102,29 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   font-weight: bold;
-  color: white;
+  // color: white;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .profile-info a:hover {
-  color: rgb(212, 212, 212);
+  color: rgb(161, 160, 160);
 }
 
 .user-info a {
-  padding-right: 14px;
+  padding-right: 18px;
   font-weight: bold;
-  color: white;
   text-decoration: none;
 }
 
 .user-info a:hover {
-  color: rgb(212, 212, 212);
+  color: rgb(161, 160, 160);
 }
 
 .right-side-nav .profile-info {
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .right-side-nav .user-info {
@@ -134,7 +134,7 @@ a {
 }
 
 .pi-shopping-cart:before {
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
 .pi-user:before {
@@ -265,11 +265,43 @@ button.nofocus {
     font-size: 16px;
   }
 
-  .pi-sign-out:before {
-    font-size: 12px;
+  :host ::ng-deep .pi-sign-out::before {
+    font-size: 10px;
   }
 
   .user-info a {
     padding-right: 10px;
   }
+}
+
+a.dropdown-item {
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.language-dropdown {
+  font-weight: bold;
+}
+
+.language-dropdown .btn {
+  font-weight: bold;
+  background-color: black;
+  outline: none;
+}
+
+.language-dropdown .btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.language-dropdown .dropdown-menu {
+  min-width: 100px;
+}
+
+.language-dropdown .dropdown-item {
+  color: #333333;
+}
+
+.language-dropdown .dropdown-item:hover {
+  background-color: #f2f2f2;
 }
