Update some style

--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -13,45 +13,47 @@ footer {
   max-width: 1200px;
   margin: 0 auto;
   padding-top: 32px;
-}
 
-.footer-section h5 {
-  margin-bottom: 10px;
-  font-weight: bold;
-}
+  .footer-section {
+    h5 {
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
 
-.footer-section ul {
-  list-style: none;
-  padding: 0;
-}
+    ul {
+      list-style: none;
+      padding: 0;
+    }
 
-.footer-section li {
-  margin-bottom: 5px;
-}
+    li {
+      margin-bottom: 5px;
+    }
+  }
 
-.social-media {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column; /* Display icons below each other */
-  align-items: center;
-}
+  .social-media {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-.social-media a {
-  display: inline-block;
-  margin-bottom: 20px; /* Adjust spacing between icons */
-  color: #fff;
-  text-decoration: none;
-  font-size: 20px;
+    a {
+      display: inline-block;
+      margin-bottom: 20px;
+      color: #fff;
+      text-decoration: none;
+      font-size: 20px;
+    }
+  }
 }
 
 a {
   color: white;
   text-decoration: none;
   background-color: transparent;
-}
 
-a:hover {
-  color: rgb(212, 212, 212);
+  &:hover {
+    color: rgb(212, 212, 212);
+  }
 }
 
 /* @media screen and (width: 280px) and (height: 653px) {
