--- a/src/app/component/product-details/product-details.component.scss
+++ b/src/app/component/product-details/product-details.component.scss
@@ -1,5 +1,5 @@
-.details{
-  height:100vh
+.details {
+  height: 100vh;
 }
 
 .container {
@@ -20,23 +20,33 @@
   border-radius: 8px;
   margin-top: 170px;
   width: 1000px;
+
+  @media screen and (max-width: 1000px) {
+    width: 90%;
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    padding: 15px;
+    margin-top: 100px;
+  }
 }
 
 .table {
   width: 100%;
   border-collapse: collapse;
-}
 
-th,
-td {
-  padding: 30px;
-  text-align: left;
-  border: 1px solid white;
-}
+  th,
+  td {
+    padding: 30px;
+    text-align: left;
+    border: 1px solid white;
+  }
 
-th {
-  background-color: #f2f2f2;
-  text-align: center;
+  th {
+    background-color: #f2f2f2;
+    text-align: center;
+  }
 }
 
 h6 {
@@ -53,22 +63,8 @@ img {
   text-align: center;
 }
 
-/* Additional styling for responsiveness */
 @media screen and (max-width: 600px) {
   .container {
     margin: 10px;
-  }
-}
-@media screen and (max-width: 1000px) {
-  .cart-product {
-    width: 90%; /* Adjust the width for smaller screens */
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cart-product {
-    width: 100%; /* Adjust the width for even smaller screens */
-    padding: 15px; /* Adjust padding for smaller screens */
-    margin-top: 100px; /* Adjust margin-top for smaller screens */
   }
 }
